update swag
